js/src/tests/test262/built-ins/Error/prototype/S15.11.3.1_A3_T1.js
if
(
!
(
Error
.
hasOwnProperty
(
'
prototype
'
)
)
)
{
throw
new
Test262Error
(
'
#
1
:
Error
.
hasOwnProperty
(
\
'
prototype
\
'
)
return
true
.
Actual
:
'
+
Error
.
hasOwnProperty
(
'
prototype
'
)
)
;
}
var
__obj
=
Error
.
prototype
;
verifyNotWritable
(
Error
"
prototype
"
null
function
(
)
{
return
"
shifted
"
;
}
)
;
if
(
Error
.
prototype
!
=
=
__obj
)
{
throw
new
Test262Error
(
'
#
2
:
__obj
=
Error
.
prototype
;
Error
.
prototype
=
function
(
)
{
return
"
shifted
"
;
}
;
Error
.
prototype
=
=
=
__obj
.
Actual
:
'
+
Error
.
prototype
)
;
}
try
{
Error
.
prototype
(
)
;
throw
new
Test262Error
(
'
#
3
:
"
Error
.
prototype
(
)
"
lead
to
throwing
exception
'
)
;
}
catch
(
e
)
{
if
(
e
instanceof
Test262Error
)
throw
e
;
}
reportCompare
(
0
0
)
;
